force-app/main/default/objects/AdminTool_FieldScanJob__c/AdminTool_FieldScanJob__c.object-meta.xml
<CustomObject>
    <description>Stores asynchronous Field Analytics dependency scan status and results.</description>
    <label>Admin Tool Field Scan Job</label>
    <nameField>
        <displayFormat>FSJ-{000000}</displayFormat>
        <label>Scan Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Tool Field Scan Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>