force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/BulkScanJob__c.field-meta.xml
<CustomField>
    <fullName>BulkScanJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Scan Job</label>
    <referenceTo>AdminTool_BulkFieldScanJob__c</referenceTo>
    <relationshipLabel>Field Scan Jobs</relationshipLabel>
    <relationshipName>FieldScanJobs</relationshipName>
    <type>Lookup</type>
</CustomField>