force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/CleanupRecommendation__c.field-meta.xml
<CustomField>
    <fullName>CleanupRecommendation__c</fullName>
    <label>Cleanup Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleanup Candidate</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>