force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/DependencyCount__c.field-meta.xml
<CustomField>
    <fullName>DependencyCount__c</fullName>
    <label>Dependency Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>