force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/ReportMatchCount__c.field-meta.xml
<CustomField>
    <fullName>ReportMatchCount__c</fullName>
    <label>Report Match Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>