force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/SkippedReportCount__c.field-meta.xml
<CustomField>
    <fullName>SkippedReportCount__c</fullName>
    <label>Skipped Report Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>