force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>