force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/TextMatchCount__c.field-meta.xml
<CustomField>
    <fullName>TextMatchCount__c</fullName>
    <label>Text Match Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>