force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/WarningCount__c.field-meta.xml
<CustomField>
    <fullName>WarningCount__c</fullName>
    <label>Warning Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>