force-app/main/default/objects/AdminTool_FieldScanJob__c/fields/WarningsJson__c.field-meta.xml
<CustomField>
    <fullName>WarningsJson__c</fullName>
    <label>Warnings JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>